# Maquina-virtual---Arquitectura-de-computadoras-2025

./: .gitignore  CMakeLists.txt  README.md  TPArqu
mv/: main.c  mv.cbp
mv/Source/: disassembler.c  funciones.c  main.c  mv.c  operando.c  paramsegment.c  vmi.c
mv/include/: disassembler.h  funciones.h  mv.h  operando.h  paramsegment.h  vmi.h
